# "python3 -m build"

[project]
name = "pmaudit"
version = "1.0"
authors = [
  { name="David Boyce", email="github@boyski.com" },
]
description = "Poor Man's File Auditor"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/boyski/pmaudit"
"Bug Tracker" = "https://github.com/boyski/pmaudit/issues"
